# c-libs

./: Makefile  README.md  list.c  list.h  list_test.c  map.c  map.h  map_test.c  test.h
.github/workflows/: ccpp.yml
tests/: CMakeLists.txt  test_map.c
